[gd_scene load_steps=6 format=3 uid="uid://dnknssgpqt76w"]

[ext_resource type="Script" path="res://levels/transition_vn_screen.gd" id="1_miukh"]
[ext_resource type="Theme" uid="uid://b6lwe4pm4u5aq" path="res://temporary_assets/transition/main_text_theme.tres" id="2_eyus6"]
[ext_resource type="Texture2D" uid="uid://cuopj4uy6g24j" path="res://temporary_assets/transition/up-arrow.png" id="3_3h3g4"]

[sub_resource type="Animation" id="Animation_81vx8"]
resource_name = "transition"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition_control/CenterContainer3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.2, 2.2),
"transitions": PackedFloat32Array(1, 0.138696),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition_control/CenterContainer2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2, 2.2),
"transitions": PackedFloat32Array(1, 0.143587),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("transition_control/CenterContainer4:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 1.2),
"transitions": PackedFloat32Array(0.098073, 2.21914),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("transition_control/CenterContainer3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2, 2.2),
"transitions": PackedFloat32Array(0.425, 1.79),
"update": 0,
"values": [Vector2(205, 219), Vector2(205, 159)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("transition_control/CenterContainer2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2, 2.2),
"transitions": PackedFloat32Array(0.425, 1.8),
"update": 0,
"values": [Vector2(145, 158), Vector2(145, 78)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("transition_control/CenterContainer4:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.2, 2.2),
"transitions": PackedFloat32Array(0.425, 1.8025),
"update": 0,
"values": [Vector2(205, 190), Vector2(205, 110)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("transition_control/CenterContainer4:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.2, 2.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.2, 1.2),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(127, 320), Vector2(127, 180)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.2, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wik6l"]
_data = {
"transition": SubResource("Animation_81vx8")
}

[node name="transition_vn_screen" type="Node2D"]
script = ExtResource("1_miukh")

[node name="transition_control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 642.0
offset_bottom = 356.0

[node name="CenterContainer3" type="CenterContainer" parent="transition_control"]
layout_mode = 2
offset_left = 205.0
offset_top = 159.0
offset_right = 555.0
offset_bottom = 196.0
grow_vertical = 2

[node name="transition_text" type="RichTextLabel" parent="transition_control/CenterContainer3"]
clip_contents = false
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme = ExtResource("2_eyus6")
text = "XXXX Building
"
fit_content = true

[node name="CenterContainer2" type="CenterContainer" parent="transition_control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 145.0
offset_top = -100.0
offset_right = 565.0
offset_bottom = -60.0
grow_vertical = 2

[node name="header_text" type="RichTextLabel" parent="transition_control/CenterContainer2"]
clip_contents = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("2_eyus6")
text = "Now Arriving"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="transition_control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_vertical = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="transition_control/CenterContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="CenterContainer4" type="CenterContainer" parent="transition_control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 205.0
offset_top = -68.0
offset_right = 525.0
offset_bottom = -28.0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="transition_control/CenterContainer4"]
custom_minimum_size = Vector2(320, 3)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wik6l")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(127, 180)
scale = Vector2(0.142578, 0.142578)
texture = ExtResource("3_3h3g4")
